<resources>
    <string name="app_name">Wireframe</string>
    <string name="nav_header_title">Wireframe</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_work">Work</string>
    <string name="menu_paging">Paging</string>
    <string name="menu_placeholder">Placeholder</string>
    <string name="title_activity_tab">Tab Activity</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_clear_message">Remove all items from the list?</string>
    <string name="clear_message">All items have been removed from the list</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings Activity</string>
    <string name="action_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="username_title">Your username</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preference Keys and Defaults -->
    <string translatable="false" name="key_username">username</string>
    <string translatable="false" name="default_username">New User</string>
    <string translatable="false" name="key_reply">reply</string>
    <string translatable="false" name="default_reply">reply</string>
    <string translatable="false" name="key_sync">sync</string>
    <string translatable="false" name="key_attachment">attachment</string>

    <!-- Levels -->
    <string name="level_off">Off</string>
    <string name="level_low">Low</string>
    <string name="level_medium">Medium</string>
    <string name="level_high">High</string>

</resources>